[project]
name = "mist-datasource"
version = "0.1.0"
description = "数据源桥接层 - 适配通达信/QMT SDK 为 HTTP/WebSocket 服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
tdx = ["tqcenter"]       # 通达信 SDK (Windows only)
qmt = ["xtquant"]       # QMT SDK (Windows only)
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.388",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
